Further rem fixes, converting rem values to px rather than em

--- a/libs/base/lists.less
+++ b/libs/base/lists.less
@@ -118,7 +118,7 @@ li > ol {
 .search-tab-container{
     background: @gray-7;
     overflow: hidden;
-    margin-top: unit(@box-spacing*.6,em);
+    margin-top: unit(@box-spacing*.6*@base-size,px);
     margin-top: @box-spacing*.6;
     border-bottom: 1em*.6 solid @heritage-blue;
     border-bottom: @box-spacing*.6 solid @heritage-blue;
@@ -157,9 +157,9 @@ li > ol {
 .letters-tab-container {
     background: @gray-7;
     overflow: hidden;
-    margin-top: unit(@box-spacing*.6);
+    margin-top: unit(@box-spacing*.6*@base-size,px);
     margin-top: @box-spacing*.6;
-    border-bottom: unit(@box-spacing*.6,em) solid @heritage-blue;
+    border-bottom: unit(@box-spacing*.6*@base-size,px) solid @heritage-blue;
     border-bottom: @box-spacing*.6 solid @heritage-blue;
     clear: both;
     ul {
