--- a/libs/base/tables.less
+++ b/libs/base/tables.less
@@ -70,7 +70,7 @@ th {
         background-image: url('/static/layout/sortable-desc.png');
     }
     &-header-inner{
-        padding-right: unit(@box-spacing-horizontal,em);
+        padding-right: unit(@box-spacing-horizontal*@base-size,px);
         padding-right: @box-spacing-horizontal;
     }
 }
