--- a/libs/modules/boxes.less
+++ b/libs/modules/boxes.less
@@ -107,10 +107,10 @@
 }
 
 .breadcrumb-lite {
-    padding-top: unit(@box-spacing*.5,em);
+    padding-top: unit(@box-spacing*.5*@base-size,px);
     padding-top: @box-spacing*.5;
     @media screen and (max-width: @screen-xs-max) {
-        margin-top: unit(@box-spacing-vertical*1.5,em);
+        margin-top: unit(@box-spacing-vertical*1.5*@base-size,px);
         margin-top: @box-spacing-vertical*1.5;
     }
 }
