--- a/libs/modules/dialog.less
+++ b/libs/modules/dialog.less
@@ -96,15 +96,15 @@
 	background: none;
 	cursor: pointer;
 	position: absolute;
-	right: unit(@box-spacing-horizontal*.5,em);
+	right: unit(@box-spacing-horizontal*.5*@base-size,px);
 	right: @box-spacing-horizontal*.5;
 	top: 50%;
-	margin-top: unit(-@box-spacing*.7,em);
+	margin-top: unit(-@box-spacing*.7*@base-size,px);
 	margin-top: -@box-spacing*.7;
-	margin-right: unit(@box-spacing-horizontal*.25,em);
+	margin-right: unit(@box-spacing-horizontal*.25*@base-size,px);
 	margin-right: @box-spacing-horizontal*.25;
 	font-size: @font-size-h4;
-	padding: unit(@box-spacing-horizontal*.2,em);
+	padding: unit(@box-spacing-horizontal*.2*@base-size,px);
 	padding: @box-spacing-horizontal*.2;
 	line-height: 1;
 	width: 1.4em;
