--- a/libs/modules/feed.less
+++ b/libs/modules/feed.less
@@ -39,7 +39,7 @@
 }
 
 .feed--content-page .feed__item {
-    margin-bottom: unit(@box-spacing,em);
+    margin-bottom: unit(@box-spacing*@base-size,px);
     margin-bottom: @box-spacing;
 }
 
@@ -100,7 +100,7 @@
     }
 
     .feed {
-        margin-bottom: unit(@box-spacing,em);
+        margin-bottom: unit(@box-spacing*@base-size,px);
         margin-bottom: @box-spacing;
     }
 }
