--- a/libs/modules/footer.less
+++ b/libs/modules/footer.less
@@ -58,7 +58,7 @@
 
     & img {
         float: left;
-        margin-right: unit(@box-spacing-horizontal*2,em);
+        margin-right: unit(@box-spacing-horizontal*2*@base-size,px);
         margin-right: @box-spacing-horizontal*2;
     }
 }
