--- a/libs/modules/members.less
+++ b/libs/modules/members.less
@@ -6,7 +6,7 @@
 
 
 .home-page--member {
-    margin-top: unit(@box-spacing, em);
+    margin-top: unit(@box-spacing*@base-size,px);
     margin-top: @box-spacing;
 }
 
@@ -143,7 +143,7 @@
     */
 
     & .member-map {
-        margin-top: unit(@box-spacing*3,em);
+        margin-top: unit(@box-spacing*3*@base-size,px);
         margin-top: @box-spacing*3;
         min-height: 200px;
         @media (max-width: @screen-sm-min) {
@@ -189,7 +189,7 @@
     margin: 1em 0 0 0;
 
     & > a {
-        margin-right: unit(@box-spacing-horizontal*.5,em);
+        margin-right: unit(@box-spacing-horizontal*.5*@base-size,px);
         margin-right: @box-spacing-horizontal*.5;
         padding: 25px;
     }
