--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -83,7 +83,7 @@
 				button {
 					.btn-icon("\f014",@border:no-border);
 					.vertical-align(absolute);
-					right: unit(@box-spacing-horizontal*.75,em);
+					right: unit(@box-spacing-horizontal*.75*@base-size,px);
 					right: @box-spacing-horizontal*.75;
 					margin: 0;
 					.spacing(padding,@box-spacing);
@@ -100,7 +100,7 @@
 					button {
 						.btn-icon("\f0e2",@border:no-border);
 						.vertical-align(absolute);
-						right: unit(@box-spacing-horizontal*.75,em);
+						right: unit(@box-spacing-horizontal*.75*@base-size,px);
 						right: @box-spacing-horizontal*.75;
 						margin: 0;
 						.spacing(padding,@box-spacing);
