--- a/libs/modules/page-list.less
+++ b/libs/modules/page-list.less
@@ -12,15 +12,15 @@
 
 .page-list__item {
     overflow: hidden;
-    margin-bottom: unit(@box-spacing,em);
+    margin-bottom: unit(@box-spacing*@base-size,px);
     margin-bottom: @box-spacing;
 }
 
 .page-list__image {
     float: left;
-    margin-top: unit(@box-spacing*.25,em);
+    margin-top: unit(@box-spacing*.25*@base-size,px);
     margin-top: @box-spacing*.25;
-    margin-right: unit(@box-spacing-horizontal,em);
+    margin-right: unit(@box-spacing-horizontal*@base-size,px);
     margin-right: @box-spacing-horizontal;
 }
 
