--- a/libs/modules/paragraph-numbers.less
+++ b/libs/modules/paragraph-numbers.less
@@ -10,7 +10,7 @@
     
     
     & > * {
-        margin-left: unit(@box-spacing-horizontal*3,em);
+        margin-left: unit(@box-spacing-horizontal*3*@base-size,px);
         margin-left: @box-spacing-horizontal*3;
     }
 
@@ -20,7 +20,7 @@
 
     .paranum {
         position: absolute;
-        margin-left: unit(-@box-spacing-horizontal*3,em);
+        margin-left: unit(-@box-spacing-horizontal*3*@base-size,px);
         margin-left: -@box-spacing-horizontal*3;
     }
 }
