--- a/libs/modules/share-bar.less
+++ b/libs/modules/share-bar.less
@@ -24,7 +24,7 @@ html[data-useragent*='Mobi'] .a-social-whatsapp {
 // Fixes an issue with spacing when the section notice is present
 // SHAME Daniel
 .section-notice + .main-content .share-bar__outer {
-    margin-top: unit(@box-spacing,em);
+    margin-top: unit(@box-spacing*@base-size,px);
     margin-top: @box-spacing;
 }
 
