--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -17,7 +17,7 @@
     }
 
     & > .webchat .webchat__button {
-        margin-bottom: unit(@box-spacing-horizontal,em);
+        margin-bottom: unit(@box-spacing-horizontal*@base-size,px);
         margin-bottom: @box-spacing-horizontal;
     }
 
