--- a/libs/modules/status.less
+++ b/libs/modules/status.less
@@ -20,7 +20,7 @@
     display: inline-block;
     float: left;
     .spacing(padding,@box-spacing*.5);
-    margin-right: unit(@box-spacing*.5,em);
+    margin-right: unit(@box-spacing*.5*@base-size,px);
     margin-right: @box-spacing*.5;
 }
 @media (max-width: 767px) {
