--- a/libs/tools.less
+++ b/libs/tools.less
@@ -31,6 +31,7 @@
 	//@import "mixins/popup";
 	@import "mixins/vertical-align";
 	@import "mixins/btn-icon";
+	@import "mixins/spacing";
 
 	/* Module files 
 	@import "modules/extent-switcher-modal";
