--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -26,7 +26,7 @@ body{
 
 .print-only.logo {
 	display: block;
-	margin-bottom: unit(@box-spacing,em);
+	margin-bottom: unit(@box-spacing*@base-size,px);
 	margin-bottom: @box-spacing;
 }
 
