--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -17,7 +17,7 @@
         color: @heritage-blue;
         font-weight: @font-weight-bolder;
         font-size: 1.1rem;
-        margin-bottom: unit(@box-spacing-vertical*1.25,em);
+        margin-bottom: unit(@box-spacing-vertical*1.25*@base-size,px);
         margin-bottom: @box-spacing-vertical*1.25;
     }
     ul, ol {
@@ -96,9 +96,9 @@
         }
         span {
             font-weight: 900;
-            margin-right: unit(@box-spacing-horizontal/2,em);
+            margin-right: unit(@box-spacing-horizontal/2*@base-size,px);
             margin-right: @box-spacing-horizontal/2;
-            margin-left: unit(-@box-spacing-horizontal,em);
+            margin-left: unit(-@box-spacing-horizontal*@base-size,px);
             margin-left: -@box-spacing-horizontal;
             color: @heritage-blue;
         }
@@ -111,7 +111,7 @@
 }
 
 .beta-dap-menu-accordion__sections {
-  margin-bottom: unit(@box-spacing-vertical,em);
+  margin-bottom: unit(@box-spacing-vertical*@base-size,px);
 }
 
 
@@ -143,9 +143,9 @@
                 font-size: 2em;
             }
             strong {
-                margin-right: unit(@box-spacing-horizontal/4,em);
+                margin-right: unit(@box-spacing-horizontal/4*@base-size,px);
                 margin-right: @box-spacing-horizontal/4;
-                margin-left: unit(-@box-spacing-horizontal,em);
+                margin-left: unit(-@box-spacing-horizontal*@base-size,px);
                 margin-left: -@box-spacing-horizontal;
             }
         }
@@ -173,12 +173,12 @@
     overflow: scroll;
     background-color: rgba(255, 255, 255, 0.75);
     visibility: hidden;
-    padding-bottom: unit(@box-spacing*2,em);
+    padding-bottom: unit(@box-spacing*2*@base-size,px);
     padding-bottom: @box-spacing*2;
     strong {
-        margin-right: unit(@box-spacing-horizontal/4,em);
+        margin-right: unit(@box-spacing-horizontal/4*@base-size,px);
         margin-right: @box-spacing-horizontal/4;
-        margin-left: unit(-@box-spacing-horizontal,em);
+        margin-left: unit(-@box-spacing-horizontal*@base-size,px);
         margin-left: -@box-spacing-horizontal;
     }
     li {
