--- a/libs/modules/sidebar-navigation-accordion.less
+++ b/libs/modules/sidebar-navigation-accordion.less
@@ -55,7 +55,7 @@
 
     #beta-dap-menu-accordion .beta-dap-menu-accordion__section > .beta-dap-menu-accordion__link {
         .spacing(padding,@box-spacing*.875);
-        padding-right: unit(@box-spacing*2.8,em);
+        padding-right: unit(@box-spacing*2.8*@base-size,px);
         padding-right: @box-spacing*2.8;
         cursor: pointer;
         z-index: 2;
